# STQL_Convex_Spatial_Wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.cmake/api/v1/reply/: cache-v2-14d3f34b81c011dff79e.json  cmakeFiles-v1-2c65f0d03e5ecfd5a2fe.json  cmakeFiles-v1-b26143c813ac51fda6ba.json  codemodel-v2-7ddf16a884e24c03d1de.json  index-2020-10-21T03-57-51-0584.json  index-2020-10-21T11-36-02-0523.json  target-spatial_cilantro-6c6fd7de4d2f19fb3d96.json  target-spatio_test-c99efa37c24f855851f4.json
cilantro_wrapper/: CMakeLists.txt  cilantro_wrapper.cpp  cilantro_wrapper.h  cvx_polytope_spatial.cpp  cvx_polytope_spatial.h
